[gd_scene load_steps=2 format=3 uid="uid://cm7kwcphuplnw"]

[ext_resource type="Script" path="res://menu.gd" id="1_hxy72"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hxy72")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.5
offset_top = -50.5
offset_right = 45.5
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="StartBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../ExitBtn")
focus_neighbor_bottom = NodePath("../OptionsBtn")
text = "START"

[node name="OptionsBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../StartBtn")
focus_neighbor_bottom = NodePath("../ExitBtn")
text = "OPTIONS"

[node name="ExitBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../OptionsBtn")
focus_neighbor_bottom = NodePath("../StartBtn")
text = "EXIT GAME"

[connection signal="pressed" from="VBoxContainer/StartBtn" to="." method="_on_start_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsBtn" to="." method="_on_options_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitBtn" to="." method="_on_exit_btn_pressed"]
